tests/NormalTests/paczka1/fuzzy1/63385306.err
Error in line 2: S339 S698 19,1
Error in line 13: PVUF0 S339 32,3
Error in line 20: ZJe S698 73,2
Error in line 26: ZJe A451 85,6
Error in line 32: ZJe S698 57,5
